--- a/3-Cirriculam Vitae.html/index.html
+++ b/3-Cirriculam Vitae.html/index.html
@@ -96,6 +96,7 @@
         style="border: 1px cornsilk ; background-color: rgb(211, 224, 221);  width: 80%;height: 1200px; float: right ;">
 
         <div style="border: 1px cornsilk ; background-color: rgb(204, 212, 218);  width: 100%;height: 200px; ">
+            <!--this is summary-->
             <h3>SUMMARY:</h3>
             <p style="font-size: large;"><i> (C.L.M) </i>&nbsp; Commitment, &nbsp;Loyality &nbsp;and &nbsp;Enthusiasm
                 are the basic indicators for achivements in our lives. And I do belive all these as basic fundamentels.
